--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@ button { padding:5px 10px; cursor:pointer; }
   flex:1;
 }
 .green { color:green; }
-.red { color:red; }
 .karyawan { border:2px solid #999; padding:10px; margin-bottom:25px; background:#fafafa; }
 </style>
 </head>
 <body>
 
 <h1>Payroll 2 Minggu – Multi Karyawan</h1>
+
+<!-- TANGGAL GLOBAL -->
+<h3>Tanggal Mulai Periode</h3>
+<input type="date" id="tanggalMulai">
 
 <div class="dashboard">
   <div class="card">
@@ -46,31 +49,50 @@ button { padding:5px 10px; cursor:pointer; }
 <script>
 const hariIndo = ["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
 
-function buatTabelHari() {
+function tanggalKeHari(tgl){
+  return hariIndo[new Date(tgl).getDay()];
+}
+
+function buatBarisHari(index){
+  return `
+  <tr data-index="${index}">
+    <td class="tgl"></td>
+    <td class="hari"></td>
+    <td><input type="time"></td>
+    <td><input type="time"></td>
+    <td><input type="checkbox"></td>
+    <td class="jam">0</td>
+  </tr>`;
+}
+
+function buatTabelHari(){
   let html = `
   <table>
   <tr>
     <th>Tanggal</th><th>Hari</th><th>Masuk</th><th>Keluar</th><th>x2</th><th>Jam</th>
   </tr>`;
-  const start = new Date();
   for(let i=0;i<14;i++){
-    const d = new Date(start);
-    d.setDate(start.getDate()+i);
-    html += `
-    <tr>
-      <td><input type="date" value="${d.toISOString().split('T')[0]}"></td>
-      <td>${hariIndo[d.getDay()]}</td>
-      <td><input type="time"></td>
-      <td><input type="time"></td>
-      <td><input type="checkbox"></td>
-      <td class="jam">0</td>
-    </tr>`;
+    html += buatBarisHari(i);
   }
   html += `</table>`;
   return html;
 }
 
-function tambahKaryawan(nama="Karyawan") {
+function refreshTanggalSemua(){
+  const start = document.getElementById("tanggalMulai").value;
+  if(!start) return;
+
+  document.querySelectorAll("tr[data-index]").forEach(tr=>{
+    const i = +tr.dataset.index;
+    const d = new Date(start);
+    d.setDate(d.getDate()+i);
+    const iso = d.toISOString().split("T")[0];
+    tr.querySelector(".tgl").innerText = iso;
+    tr.querySelector(".hari").innerText = tanggalKeHari(iso);
+  });
+}
+
+function tambahKaryawan(nama="Karyawan"){
   const div = document.createElement("div");
   div.className = "karyawan";
   div.innerHTML = `
@@ -88,9 +110,10 @@ function tambahKaryawan(nama="Karyawan") {
     <b>Total Gaji:</b> <span class="totalGaji green">Rp 0</span>
   `;
   document.getElementById("listKaryawan").appendChild(div);
+  refreshTanggalSemua();
 }
 
-function hitungSemua() {
+function hitungSemua(){
   let grandJam = 0;
   let grandGaji = 0;
 
@@ -100,20 +123,21 @@ function hitungSemua() {
     const gajiJam = +k.querySelector(".gajiJam").value;
     const uangMakan = +k.querySelector(".uangMakan").value;
 
-    k.querySelectorAll("table tr").forEach((tr,i)=>{
-      if(i===0) return;
+    k.querySelectorAll("tr[data-index]").forEach(tr=>{
       const masuk = tr.children[2].querySelector("input").value;
       const keluar = tr.children[3].querySelector("input").value;
       const x2 = tr.children[4].querySelector("input").checked;
       let jam = 0;
+
       if(masuk && keluar){
         const m = new Date("1970-01-01T"+masuk);
         const k2 = new Date("1970-01-01T"+keluar);
         jam = (k2-m)/36e5;
-        if(jam<0) jam+=24;
-        if(x2) jam*=2;
+        if(jam < 0) jam += 24; // shift malam
+        if(x2) jam *= 2;
         totalMakan += uangMakan;
       }
+
       tr.querySelector(".jam").innerText = jam.toFixed(2);
       totalJam += jam;
     });
@@ -130,13 +154,23 @@ function hitungSemua() {
   document.getElementById("grandGaji").innerText = "Rp " + grandGaji.toLocaleString();
 }
 
+document.getElementById("tanggalMulai").addEventListener("change", ()=>{
+  refreshTanggalSemua();
+  hitungSemua();
+});
+
 document.body.addEventListener("input", hitungSemua);
 document.body.addEventListener("change", hitungSemua);
 
-// BUAT DEFAULT 13 KARYAWAN
+// default tanggal hari ini
+document.getElementById("tanggalMulai").value =
+  new Date().toISOString().split("T")[0];
+
+// default 13 karyawan
 for(let i=1;i<=13;i++){
   tambahKaryawan("Karyawan "+i);
 }
+refreshTanggalSemua();
 hitungSemua();
 </script>
 
