--- a/index.html
+++ b/index.html
@@ -4,46 +4,51 @@
 <meta charset="UTF-8">
 <title>Finance Salary - Payroll 2 Minggu</title>
 <style>
-body { font-family: Arial, sans-serif; background:#f4f6f8; margin:20px; }
-h1,h2,h3 { margin:10px 0; }
-table { border-collapse: collapse; width:100%; background:#fff; margin-bottom:15px; }
-th, td { border:1px solid #ccc; padding:5px; text-align:center; }
-th { background:#eee; }
-input[type="number"], input[type="time"], input[type="date"], input[type="text"] {
-  width:100%; box-sizing:border-box;
-}
-button { padding:5px 10px; cursor:pointer; }
-.dashboard { display:flex; gap:20px; margin-bottom:20px; }
-.card {
-  background:#fff; padding:15px; border-radius:6px;
-  box-shadow:0 0 5px rgba(0,0,0,.1);
-  flex:1;
-}
-.green { color:green; }
-.red { color:red; }
-.karyawan { border:2px solid #999; padding:10px; margin-bottom:25px; background:#fafafa; }
+body{font-family:Arial;background:#f4f6f8;margin:20px}
+table{border-collapse:collapse;width:100%;background:#fff;margin-bottom:10px}
+th,td{border:1px solid #ccc;padding:5px;text-align:center}
+th{background:#eee}
+input{width:100%;box-sizing:border-box}
+.karyawan{border:2px solid #999;padding:10px;margin-bottom:20px;background:#fafafa}
+.dashboard{display:flex;gap:20px;margin-bottom:20px}
+.card{background:#fff;padding:15px;border-radius:6px;flex:1}
+.green{color:green}
+.red{color:red}
+button{padding:5px 10px}
 </style>
 </head>
 <body>
 
-<h1>Payroll 2 Minggu – Multi Karyawan</h1>
+<h1>Payroll 2 Minggu</h1>
 
-<h3>Tanggal Mulai Periode</h3>
+Tanggal Mulai:
 <input type="date" id="tanggalMulai">
 
 <div class="dashboard">
   <div class="card">
-    <h3>Total Jam Semua Karyawan</h3>
+    <b>Total Jam</b>
     <h2 id="grandJam">0</h2>
   </div>
   <div class="card">
-    <h3>Total Gaji Bersih</h3>
+    <b>Total Gaji Bersih</b>
     <h2 class="green" id="grandGaji">Rp 0</h2>
   </div>
 </div>
 
 <button onclick="tambahKaryawan()">+ Tambah Karyawan</button>
+
 <div id="listKaryawan"></div>
 
 <script>
-const hariIndo = ["Minggu","Senin","Selasa","Rabu","Kamis","Jumat"]()
+const hari = ["Minggu","Senin","Selasa","Rabu","Kamis","Jumat","Sabtu"];
+
+function fmtTanggal(d){
+  const dd=String(d.getDate()).padStart(2,'0');
+  const mm=String(d.getMonth()+1).padStart(2,'0');
+  const yy=String(d.getFullYear()).slice(-2);
+  return `${dd}-${mm}-${yy}`;
+}
+
+function tabelHari(){
+  let h=`<table>
+  <tr><th>Tanggal</th><th>Hari</th><th>
